OSJ-69 Replace the OWASP base64 decoder used in tests with a JDK provided base64 decoder.